# desafio-devops

./: ._README.md  ._app  .gitignore  COMMENTS.md  README.md
.github/workflows/: cd_app.yaml  iac.yaml  iac_deprovisioning.yaml  iac_provisioning.yaml  iac_provisoning.yaml  main.yaml
app/: .dockerignore  .env.template  Dockerfile  Dockerfile.bak  Makefile  README.md  api.py  config.py  main.py  pyproject.toml  requirements.txt
app/api/: utils.py
app/k8s/: flask-app-k8s.yaml
cloud_infra/: README.md
cloud_infra/aws/: README.md
cloud_infra/terraform/: Makefile  README.md  main.tf  output.tf  vars.tf
local_infra/: Makefile  README.md  Vagrantfile  Vagrantfile.bak  requirements.txt
local_infra/ansible/: README.md  playbook.yaml
local_infra/ansible/inventory/: hosts.yaml
local_infra/ansible/playbooks/: setup.yaml
local_infra/ansible/roles/argocd/files/: application.yaml
local_infra/ansible/roles/argocd/tasks/: main.yaml
local_infra/ansible/roles/common/tasks/: main.yaml
local_infra/ansible/roles/kong/files/: gateway-api-crd.yaml
local_infra/argocd/: README.md  application.yaml
local_infra/elk/: Makefile  docker-compose.yaml
local_infra/elk/logstash/: logstash.conf
local_infra/flask-app-chart/: Chart.yaml  values.yaml
local_infra/flask-app-chart/templates/: deployment.yaml  gateway.yaml  service.yaml
local_infra/k8s/: README.md  flask-app-k8s.yaml  gateway-api.yaml
local_infra/keycloak/: Dockerfile  Makefile  README.md
local_infra/kong/: README.md  values.yaml
local_infra/kong/helm/: Chart.yaml  values.yaml
(+4 files in other folders)
