[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Samuel Ferino <sferino@lenovo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "7.1.2"
Flask = "1.1.2"
gunicorn = "20.0.4"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
MarkupSafe = "1.1.1"
Werkzeug = "1.0.1"
logstash_formatter = "0.5.17"
Authlib = "^1.3.0"
pyOpenSSL = "^24.1.0"
requests = "^2.31.0"
Flask-WTF = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
